--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
-
   "name": "flask_react",
   "version": "0.1.0",
-  "private": true,
-  "proxy": "http://localhost:5000",
+  "private": false,
 
   "dependencies": {
     "axios": "^1.7.7"
